# piperx-sim-pick-place

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  ros_entrypoint.sh
src/piperx_control/: CMakeLists.txt  package.xml
src/piperx_control/include/piperx_sim_control/: piperx_sim_control.hpp
src/piperx_control/src/: piperx_sim_control.cpp
src/piperx_perception/: package.xml  setup.cfg  setup.py
src/piperx_perception/piperx_perception/: aruco_sim_detector.py
